# eightfold

./: .gitignore  README.md  demo.sh  prd.md  pyproject.toml
candidate_pipeline/: __init__.py  cli.py  console_report.py  pipeline.py
candidate_pipeline/confidence/: scorer.py
candidate_pipeline/config/: loader.py  schema.py
candidate_pipeline/merge/: engine.py  strategies.py  trust.py
candidate_pipeline/models/: canonical.py  report.py  source_record.py
candidate_pipeline/normalize/: aliases.json  country.py  dates.py  email.py  phone.py  skills.py
candidate_pipeline/project/: projector.py  resolver.py  validator.py
candidate_pipeline/resolve/: identity.py
candidate_pipeline/sources/: ats_json.py  base.py  github_api.py  recruiter_csv.py  registry.py  resume_pdf.py
deliverable/: Chanjhana Elango_chanjhana29@gmail.com_Eightfold.md  design.html
docs/: 01-overview.md  02-architecture.md  03-data-model.md  04-sources.md  05-normalization.md  06-identity-resolution.md  07-merge-and-confidence.md  08-projection-and-config.md  09-cli-reference.md  10-design-decisions.md  11-edge-cases.md  12-testing.md  13-extending.md  README.md
sample_output/: profiles.json  profiles_custom.json  report.json
tests/: conftest.py  test_adapter_resilience.py  test_adapters.py  test_cli_strict.py  test_confidence.py  test_config_validation.py  test_core_logic_edge.py  test_country.py  test_dates.py  test_e2e.py  test_email.py  test_garbage_source.py  test_identity.py  test_merge.py  test_normalizers_edge.py  test_phone.py  test_projection.py  test_resume.py  test_skills.py  test_torture_e2e.py
tests/golden/: canonical.json  (+1 more)
(+14 files in other folders)
